--- a/.github/workflows/check_and_test.yaml
+++ b/.github/workflows/check_and_test.yaml
@@ -59,5 +59,5 @@ jobs:
 
       - name: Run tests
         run: |
-          cargo check -p libde265-sys --features latest
+          cargo check -p libde265-rs --features latest
           cargo test --features latest
